--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<title>Title</title>
+<title>Bundys website</title>
 </head>
 <body>
 
@@ -22,28 +22,26 @@
 			</button>
 			
 			<div id="main-nav" class="collapse navbar-collapse">
-				<ul class="navbar-nav ml-auto">
-					<li><a href="#" class="nav-item nav-link active">Home</a></li>
-					<li><a href="#" class="nav-item nav-link">About Us</a></li>
+				<ul class="navbar-nav">
+					<li><a href="#" class="nav-item nav-link active">Bundys Home</a></li>
+					<li><a href="#" class="nav-item nav-link">Bundys About Us</a></li>
 					<li class="dropdown">
-						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Services</a>
+						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Bundys Services</a>
 						<div class="dropdown-menu">
-							<a href="#" class="dropdown-item">Dropdown Item 1</a>
-							<a href="#" class="dropdown-item">Dropdown Item 2</a>
-							<a href="#" class="dropdown-item">Dropdown Item 3</a>
+							<a href="#" class="dropdown-item">Bundys house services</a>
+							<a href="#" class="dropdown-item">Bundys corporate services</a>
+							<a href="#" class="dropdown-item">Bundys general services</a>
 						</div>
 					</li>
 					<li class="dropdown">
-						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
+						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Bundys Portfolio</a>
 						<div class="dropdown-menu">
-							<a href="#" class="dropdown-item">Dropdown Item 1</a>
-							<a href="#" class="dropdown-item">Dropdown Item 2</a>
-							<a href="#" class="dropdown-item">Dropdown Item 3</a>
-							<a href="#" class="dropdown-item">Dropdown Item 4</a>
-							<a href="#" class="dropdown-item">Dropdown Item 5</a>
+							<a href="#" class="dropdown-item">Bundys job I did 1</a>
+							<a href="#" class="dropdown-item">Bundys job I did 2</a>
+							<a href="#" class="dropdown-item">Bundys job I did 3</a>
 						</div>
 					</li>
-					<li><a href="#" class="nav-item nav-link">Contact</a></li>
+					<li><a href="#" class="nav-item nav-link">Bundys Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -51,30 +49,96 @@
 	
 	<div class="banner">
 		<div class="container">
-			<h1>Company name here</h1>
-			<p>Some kind of blah blah here about how great you are.</p>
-			<a href="#content" class="button button-primary">Learn More</a>
+			<h1>Bundys company name</h1>
+			<p>Some kind of blah blah saying how great Bundy is</p>
+			<a href="#aboutus" class="button button-primary">About Bundy</a>
 		</div>
 	</div>
 </header>
 
 <main>
-	<section id="content" class="content">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<p>Text 1 </p>
-				</div>
-				<div class="col-md-4">
-					<p>Text 2 </p>
-				</div>
-				<div class="col-md-4">
-					<p>Text 3 </p>
-				</div>
+<img class="img-fluid" src="assets/images/lightbulb.jpg" alt="image of lightbulb">
+
+<div class ="container">
+<div class="row">
+<div class="card text-center aboutbundy col col-lg-12">
+  <div class="card-header mainabout">
+    About Bundy
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Main headline about Bundy</h5>
+    <p class="card-text">This'll just be some stuff about you and your business, how great you are and reliable and local etc etc</p>
+    <a href="#" class="btn btn-primary">Contact Bundy</a>
+  </div>
+</div>
+</div>
+</div>
+
+<h1 id="testimonials">Testimonials</h1>
+
+<section id="content" class="content">        
+<div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><strong>A testimonial here</strong></h5>
+        <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+        <div class="card-footer">
+        <small class="text-muted">Jim Smith: February 2021</small>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><strong>A second one here</strong></h5>
+        <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+        <div class="card-footer">
+        <small class="text-muted">John Smith: March 2021</small>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title"><strong>And a third one here</strong></h5>
+        <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+        <div class="card-footer">
+        <small class="text-muted">Fred Smith: April 2021</small>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+</section>
+
+<footer class="footer-area overlay" id="footer">
+    <nav class="navbar navbar-expand-md navbar-dark">
+		<div class="container">				
+			<div class="collapse navbar-collapse">
+				<ul class="navbar-nav">
+					<li><a href="#" class="nav-item nav-link active">Bundys Home</a></li>
+					<li><a href="#" class="nav-item nav-link">Bundys About Us</a></li>
+					<li class="dropdown">
+						<a href="#" class="nav-item nav-link">Bundys Services</a>
+					</li>
+					<li>
+						<a href="#" class="nav-item nav-link">Bundys Portfolio</a>
+					</li>
+					<li><a href="#" class="nav-item nav-link">Bundys Contact</a></li>
+				</ul>
 			</div>
 		</div>
-	</section>
+    </nav>
+</footer>
 </main>
+<h3 class="footer-area overlay" id="thinnerfooter">Some accreditations and any social media links if you want down here</h3>
 
 <script src="scripts/scripts.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
