--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <meta name="Description" content="Enter your description here"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
-<title>Bundys website</title>
+<title>Sutton Electrical Services</title>
 </head>
 <body>
 
@@ -23,25 +24,25 @@
 			
 			<div id="main-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav">
-					<li><a href="#" class="nav-item nav-link active">Bundys Home</a></li>
-					<li><a href="#" class="nav-item nav-link">Bundys About Us</a></li>
+					<li><a href="#" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
+					<li><a href="#" class="nav-item nav-link">About Us</a></li>
 					<li class="dropdown">
-						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Bundys Services</a>
+						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Services</a>
 						<div class="dropdown-menu">
-							<a href="#" class="dropdown-item">Bundys house services</a>
-							<a href="#" class="dropdown-item">Bundys corporate services</a>
-							<a href="#" class="dropdown-item">Bundys general services</a>
+							<a href="#" class="dropdown-item">Domestic services</a>
+							<a href="#" class="dropdown-item">Corporate services</a>
+							<a href="#" class="dropdown-item">General services</a>
 						</div>
 					</li>
 					<li class="dropdown">
-						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Bundys Portfolio</a>
+						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
 						<div class="dropdown-menu">
 							<a href="#" class="dropdown-item">Bundys job I did 1</a>
 							<a href="#" class="dropdown-item">Bundys job I did 2</a>
 							<a href="#" class="dropdown-item">Bundys job I did 3</a>
 						</div>
 					</li>
-					<li><a href="#" class="nav-item nav-link">Bundys Contact</a></li>
+					<li><a href="#" class="nav-item nav-link">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -49,9 +50,9 @@
 	
 	<div class="banner">
 		<div class="container">
-			<h1>Bundys company name</h1>
-			<p>Some kind of blah blah saying how great Bundy is</p>
-			<a href="#aboutus" class="button button-primary">About Bundy</a>
+			<h1>Sutton Electrical Services</h1>
+			<p>Some kind of motto here</p>
+			<a href="#aboutus" class="button button-primary">Contact</a>
 		</div>
 	</div>
 </header>
@@ -61,14 +62,23 @@
 
 <div class ="container">
 <div class="row">
-<div class="card text-center aboutbundy col col-lg-12">
+<div class="card text-center aboutbundy col-12">
   <div class="card-header mainabout">
-    About Bundy
+    Sutton Electrical Services
   </div>
   <div class="card-body">
-    <h5 class="card-title">Main headline about Bundy</h5>
-    <p class="card-text">This'll just be some stuff about you and your business, how great you are and reliable and local etc etc</p>
-    <a href="#" class="btn btn-primary">Contact Bundy</a>
+    <h5 class="card-title">Some kind of motto here</h5>
+    <p class="card-text">Serving the Brandon Community in all forms of commercial and domestic electrical work</p>
+    <a href="#" class="btn button-primary">Contact Bundy</a>
+  </div>
+</div>
+<div class="card text-center aboutbundy col-12">
+  <div class="card-header mainabout">
+    CORONAVIRUS NOTICE
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Keeping you safe</h5>
+    <p class="card-text">We do X, Y & Z to make sure we work safely</p>
   </div>
 </div>
 </div>
@@ -123,22 +133,22 @@
 		<div class="container">				
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav">
-					<li><a href="#" class="nav-item nav-link active">Bundys Home</a></li>
-					<li><a href="#" class="nav-item nav-link">Bundys About Us</a></li>
+					<li><a href="#" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
+					<li><a href="#" class="nav-item nav-link">About Us</a></li>
 					<li class="dropdown">
-						<a href="#" class="nav-item nav-link">Bundys Services</a>
+						<a href="#" class="nav-item nav-link">Services</a>
 					</li>
 					<li>
-						<a href="#" class="nav-item nav-link">Bundys Portfolio</a>
+						<a href="#" class="nav-item nav-link">Portfolio</a>
 					</li>
-					<li><a href="#" class="nav-item nav-link">Bundys Contact</a></li>
+                    <li><a href="#" class="nav-item nav-link">Contact</a></li>
+                    <li><a href="#" class="nav-item nav-link"><i class="fab fa-facebook-square"></i></a></li>
 				</ul>
 			</div>
 		</div>
     </nav>
 </footer>
 </main>
-<h3 class="footer-area overlay" id="thinnerfooter">Some accreditations and any social media links if you want down here</h3>
 
 <script src="scripts/scripts.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
