--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
 			
 			<div id="main-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav">
-					<li><a href="#" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
+					<li><a href="index.html" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
 					<li><a href="#" class="nav-item nav-link">About Us</a></li>
 					<li class="dropdown">
-						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Services</a>
+						<a href="services.html" class="nav-item nav-link" data-toggle="dropdown">Services</a>
 						<div class="dropdown-menu">
-							<a href="#" class="dropdown-item">Domestic services</a>
-							<a href="#" class="dropdown-item">Corporate services</a>
-							<a href="#" class="dropdown-item">General services</a>
+							<a href="services.html" class="dropdown-item">Domestic services</a>
+							<a href="services.html" class="dropdown-item">Corporate services</a>
+							<a href="services.html" class="dropdown-item">General services</a>
 						</div>
 					</li>
 					<li class="dropdown">
-						<a href="#" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
+						<a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
 						<div class="dropdown-menu">
-							<a href="#" class="dropdown-item">Bundys job I did 1</a>
-							<a href="#" class="dropdown-item">Bundys job I did 2</a>
-							<a href="#" class="dropdown-item">Bundys job I did 3</a>
+							<a href="portfolio.html" class="dropdown-item">Bundys job I did 1</a>
+							<a href="portfolio.html" class="dropdown-item">Bundys job I did 2</a>
+							<a href="portfolio.html" class="dropdown-item">Bundys job I did 3</a>
 						</div>
 					</li>
-					<li><a href="#" class="nav-item nav-link">Contact</a></li>
+					<li><a href="contact.html" class="nav-item nav-link">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -50,9 +50,9 @@
 	
 	<div class="banner">
 		<div class="container">
-			<h1>Sutton Electrical Services</h1>
+			<a href="index.html"><h1 id="company-name">Sutton Electrical Services</h1></a>
 			<p>Some kind of motto here</p>
-			<a href="#aboutus" class="button button-primary">Contact</a>
+			<a href="contact.html" class="button button-primary">Contact</a>
 		</div>
 	</div>
 </header>
@@ -69,7 +69,7 @@
   <div class="card-body">
     <h5 class="card-title">Some kind of motto here</h5>
     <p class="card-text">Serving the Brandon Community in all forms of commercial and domestic electrical work</p>
-    <a href="#" class="btn button-primary">Contact Bundy</a>
+    <a href="contact.html" class="btn button-primary">Contact</a>
   </div>
 </div>
 <div class="card text-center aboutbundy col-12">
@@ -130,23 +130,27 @@
 
 <footer class="footer-area overlay" id="footer">
     <nav class="navbar navbar-expand-md navbar-dark">
-		<div class="container">				
+		<div class="container">	
+            			
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav">
-					<li><a href="#" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
+					<li><a href="index.html" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
 					<li><a href="#" class="nav-item nav-link">About Us</a></li>
 					<li class="dropdown">
-						<a href="#" class="nav-item nav-link">Services</a>
+						<a href="services.html" class="nav-item nav-link">Services</a>
 					</li>
 					<li>
-						<a href="#" class="nav-item nav-link">Portfolio</a>
+						<a href="portfolio.html" class="nav-item nav-link">Portfolio</a>
 					</li>
-                    <li><a href="#" class="nav-item nav-link">Contact</a></li>
-                    <li><a href="#" class="nav-item nav-link"><i class="fab fa-facebook-square"></i></a></li>
-				</ul>
+                    <li><a href="contact.html" class="nav-item nav-link">Contact</a></li>
+                </ul>
+                <div class ="facebook-div">
+                <a id="facebook-icon" href="https://www.facebook.com/SuttonElectricalServices/" class="nav-item nav-link" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                </div>
 			</div>
 		</div>
     </nav>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 </footer>
 </main>
 
