--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 			<div id="main-nav" class="collapse navbar-collapse">
 				<ul class="navbar-nav">
 					<li><a href="index.html" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
-					<li><a href="#" class="nav-item nav-link">About Us</a></li>
+					<li><a href="#aboutus" class="nav-item nav-link">About Us</a></li>
 					<li class="dropdown">
 						<a href="services.html" class="nav-item nav-link" data-toggle="dropdown">Services</a>
 						<div class="dropdown-menu">
-							<a href="services.html" class="dropdown-item">Domestic services</a>
-							<a href="services.html" class="dropdown-item">Corporate services</a>
-							<a href="services.html" class="dropdown-item">General services</a>
+							<a href="services.html#domesticservices" class="dropdown-item">Domestic services</a>
+							<a href="services.html#corporateservices" class="dropdown-item">Corporate services</a>
+							<a href="services.html#generalservices" class="dropdown-item">General services</a>
 						</div>
 					</li>
 					<li class="dropdown">
@@ -50,8 +50,8 @@
 	
 	<div class="banner">
 		<div class="container">
-			<a href="index.html"><h1 id="company-name">Sutton Electrical Services</h1></a>
-			<p>Some kind of motto here</p>
+			<h1 id="company-name">Sutton Electrical Services</h1>
+			<p>Serving you better, everyday</p>
 			<a href="contact.html" class="button button-primary">Contact</a>
 		</div>
 	</div>
@@ -60,14 +60,14 @@
 <main>
 <img class="img-fluid" src="assets/images/lightbulb.jpg" alt="image of lightbulb">
 
-<div class ="container">
+<div class ="container" id="aboutus">
 <div class="row">
 <div class="card text-center aboutbundy col-12">
   <div class="card-header mainabout">
     Sutton Electrical Services
   </div>
   <div class="card-body">
-    <h5 class="card-title">Some kind of motto here</h5>
+    <h5 class="card-title">Serving you better, everyday</h5>
     <p class="card-text">Serving the Brandon Community in all forms of commercial and domestic electrical work</p>
     <a href="contact.html" class="btn button-primary">Contact</a>
   </div>
@@ -135,7 +135,7 @@
 			<div class="collapse navbar-collapse">
 				<ul class="navbar-nav">
 					<li><a href="index.html" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
-					<li><a href="#" class="nav-item nav-link">About Us</a></li>
+					<li><a href="#aboutus" class="nav-item nav-link">About Us</a></li>
 					<li class="dropdown">
 						<a href="services.html" class="nav-item nav-link">Services</a>
 					</li>
