--- a/services.html
+++ b/services.html
@@ -14,6 +14,13 @@
 
 <body>
 
-    <h1>Services page</h1>
+<a href="index.html">Home</a>
+<br>
+
+<h2 id="domesticservices">Domestic Services</h2>
+
+<h2 id="corporateservices">Corporate Services</h2>
+
+<h2 id="generalservices">General Services</h2>
 
 </body>
