box shadow removed from CV section

--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,11 @@
     <h1>Contact us</h1>
     <hr>
     <br>
-    <h2><i class="fas fa-phone"></i>  07734 9020900</h2>
+    <h2>Call</h2>
+    <br>
+    <h2 class="btn button-primary"><i class="fas fa-phone"></i>  <a href="tel: 07734-9020900">07734-9020900</h2></a>
+    <br>
+    <h2>Email</h2>
     <br>
     <h2><i class="fas fa-envelope-open-text"></i>  alan@suttonelectricalservices.net</h2>
     <br>
@@ -103,7 +107,7 @@
         </div>
         <div><small>* Required</small></div>
         <div class="fcf-form-group">
-            <button type="submit" id="fcf-button" class="button button-primary">Send Message</button>
+            <button type="submit" id="fcf-button" class="button button-primary">Send Message <i class="fas fa-paper-plane"></i></button>
         </div>
     </form>
     </div>
