--- a/index.html
+++ b/index.html
@@ -1,162 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Sutton Electrical Services</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta name="Description" content="Enter your description here"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <title>Sutton Electrical Services</title>
+    </head>
+    <body>
 
-<header class="header-area overlay">
-    <nav class="navbar navbar-expand-md navbar-dark">
-		<div class="container">			
-			<button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
-				<span class="menu-icon-bar"></span>
-				<span class="menu-icon-bar"></span>
-				<span class="menu-icon-bar"></span>
-			</button>
-			
-			<div id="main-nav" class="collapse navbar-collapse">
-				<ul class="navbar-nav">
-					<li><a href="index.html" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
-					<li><a href="#aboutus" class="nav-item nav-link">About Us</a></li>
-					<li class="dropdown">
-						<a href="services.html" class="nav-item nav-link" data-toggle="dropdown">Services</a>
-						<div class="dropdown-menu">
-							<a href="services.html#domesticservices" class="dropdown-item">Domestic services</a>
-							<a href="services.html#corporateservices" class="dropdown-item">Corporate services</a>
-							<a href="services.html#generalservices" class="dropdown-item">General services</a>
-						</div>
-					</li>
-					<li class="dropdown">
-						<a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
-						<div class="dropdown-menu">
-							<a href="portfolio.html" class="dropdown-item">Bundys job I did 1</a>
-							<a href="portfolio.html" class="dropdown-item">Bundys job I did 2</a>
-							<a href="portfolio.html" class="dropdown-item">Bundys job I did 3</a>
-						</div>
-					</li>
-					<li><a href="contact.html" class="nav-item nav-link">Contact</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-	
-	<div class="banner">
-		<div class="container">
-			<h1 id="company-name">Sutton Electrical Services</h1>
-			<p>Serving you better, everyday</p>
-			<a href="contact.html" class="button button-primary">Contact</a>
-		</div>
-	</div>
-</header>
+        <header class="header-area">
+            <nav class="navbar navbar-expand-md navbar-dark">
+                <div class="container">
+                    <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
+                        <span class="menu-icon-bar"></span>
+                        <span class="menu-icon-bar"></span>
+                        <span class="menu-icon-bar"></span>
+                    </button>
 
-<main>
-<img class="img-fluid" src="assets/images/lightbulb.jpg" alt="image of lightbulb">
-
-<div class ="container" id="aboutus">
-<div class="row">
-<div class="card text-center aboutbundy col-12">
-  <div class="card-header mainabout">
-    Sutton Electrical Services
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">Serving you better, everyday</h5>
-    <p class="card-text">Serving the Brandon Community in all forms of commercial and domestic electrical work</p>
-    <a href="contact.html" class="btn button-primary">Contact</a>
-  </div>
-</div>
-<div class="card text-center aboutbundy col-12">
-  <div class="card-header mainabout">
-    CORONAVIRUS NOTICE
-  </div>
-  <div class="card-body">
-    <h5 class="card-title">Keeping you safe</h5>
-    <p class="card-text">We do X, Y & Z to make sure we work safely</p>
-  </div>
-</div>
-</div>
-</div>
-
-<h1 id="testimonials">Testimonials</h1>
-
-<section id="content" class="content">        
-<div class="row row-cols-1 row-cols-md-3 g-4">
-  <div class="col">
-    <div class="card">
-      <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><strong>A testimonial here</strong></h5>
-        <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
-        <div class="card-footer">
-        <small class="text-muted">Jim Smith: February 2021</small>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><strong>A second one here</strong></h5>
-        <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
-        <div class="card-footer">
-        <small class="text-muted">John Smith: March 2021</small>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card">
-      <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><strong>And a third one here</strong></h5>
-        <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
-        <div class="card-footer">
-        <small class="text-muted">Fred Smith: April 2021</small>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-</section>
-
-<footer class="footer-area overlay" id="footer">
-    <nav class="navbar navbar-expand-md navbar-dark">
-		<div class="container">	
-            			
-			<div class="collapse navbar-collapse">
-				<ul class="navbar-nav">
-					<li><a href="index.html" class="nav-item nav-link active"><i class="fas fa-home"></i></a></li>
-					<li><a href="#aboutus" class="nav-item nav-link">About Us</a></li>
-					<li class="dropdown">
-						<a href="services.html" class="nav-item nav-link">Services</a>
-					</li>
-					<li>
-						<a href="portfolio.html" class="nav-item nav-link">Portfolio</a>
-					</li>
-                    <li><a href="contact.html" class="nav-item nav-link">Contact</a></li>
-                </ul>
-                <div class ="facebook-div">
-                <a id="facebook-icon" href="https://www.facebook.com/SuttonElectricalServices/" class="nav-item nav-link" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                    <div id="main-nav" class="collapse navbar-collapse">
+                        <ul class="navbar-nav">
+                            <li>
+                                <a href="index.html" class="nav-item nav-link active">
+                                    <i class="fas fa-home"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#aboutus" class="nav-item nav-link">About Us</a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="services.html" class="nav-item nav-link" data-toggle="dropdown">Services</a>
+                                <div class="dropdown-menu">
+                                    <a href="services.html#domesticservices" class="dropdown-item">Domestic services</a>
+                                    <a href="services.html#corporateservices" class="dropdown-item">Corporate services</a>
+                                    <a href="services.html#generalservices" class="dropdown-item">General services</a>
+                                </div>
+                            </li>
+                            <li class="dropdown">
+                                <a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
+                                <div class="dropdown-menu">
+                                    <a href="portfolio.html" class="dropdown-item">Bundys job I did 1</a>
+                                    <a href="portfolio.html" class="dropdown-item">Bundys job I did 2</a>
+                                    <a href="portfolio.html" class="dropdown-item">Bundys job I did 3</a>
+                                </div>
+                            </li>
+                            <li>
+                                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-			</div>
-		</div>
-    </nav>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-</footer>
-</main>
+            </nav>
 
-<script src="scripts/scripts.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+            <div class="logo">
+                <img class="rounded mx-auto d-block logo" src="assets/images/bundylogo.jpg" width="300">
+            </div>
+
+            <div class="company-header">
+                <div class="container">
+                    <h1 id="company-name">Sutton Electrical Services</h1>
+                    <p>Serving you better, everyday</p>
+                    <a href="contact.html" class="button button-primary">Contact</a>
+                </div>
+            </div>
+        </header>
+
+        <img class="img-fluid" src="assets/images/lightbulb.jpg" alt="image of lightbulb">
+
+        <div class="container" id="aboutus">
+            <div class="row">
+                <div class="card text-center aboutbundy col-12">
+                    <div class="card-header mainabout">
+                        Sutton Electrical Services
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Serving you better, everyday</h5>
+                        <p class="card-text">Serving the Brandon Community in all forms of commercial and domestic electrical work</p>
+                        <a href="contact.html" class="btn button-primary">Contact</a>
+                    </div>
+                </div>
+
+                <!-- Coronavirus notice -->
+                <div class="container cvnotice d-flex justify-content-center">
+                    <div class="row">
+                        <div class="col">
+                            <p>
+                                <button class="btn button-primary shadow-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                                    Coronavirus notice
+                                </button>
+                            </p>
+                            <div class="collapse" id="collapseExample">
+                                <div class="card card-body">
+                                    <strong>We do everything we can to work and operate in a safe environment, this includes;</strong>
+                                    <ul class="list-group">
+                                        <li class="list-group-item">Doing this</li>
+                                        <li class="list-group-item">Doing that</li>
+                                        <li class="list-group-item">Doing something else</li>
+                                        <li class="list-group-item">And even other stuff</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <h1 id="testimonials">Testimonials</h1>
+
+                <section id="content" class="content">
+                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col">
+                            <div class="card">
+                                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        <strong>A testimonial here</strong>
+                                    </h5>
+                                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                                    <div class="card-footer">
+                                        <small class="text-muted">Jim Smith: February 2021</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        <strong>A second one here</strong>
+                                    </h5>
+                                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                                    <div class="card-footer">
+                                        <small class="text-muted">John Smith: March 2021</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card">
+                                <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        <strong>And a third one here</strong>
+                                    </h5>
+                                    <p class="card-text">This says how great Bundy is and what a fantastic job he did when he did what he did</p>
+                                    <div class="card-footer">
+                                        <small class="text-muted">Fred Smith: April 2021</small>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </section>
+
+                <footer class="footer-area overlay" id="footer">
+                    <nav class="navbar navbar-expand-md navbar-dark">
+                        <div class="container">
+
+                            <div class="collapse navbar-collapse">
+                                <ul class="navbar-nav">
+                                    <li>
+                                        <a href="index.html" class="nav-item nav-link active">
+                                            <i class="fas fa-home"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="index.html#aboutus" class="nav-item nav-link">About Us</a>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="services.html" class="nav-item nav-link">Services</a>
+                                    </li>
+                                    <li>
+                                        <a href="portfolio.html" class="nav-item nav-link">Portfolio</a>
+                                    </li>
+                                    <li>
+                                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                                    </li>
+                                </ul>
+                                <div class="facebook-div">
+                                    <a id="facebook-icon" href="https://www.facebook.com/SuttonElectricalServices/" class="nav-item nav-link" target="_blank">
+                                        <i class="fab fa-facebook-square"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </nav>
+                    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+                </footer>
+
+                <script src="scripts/scripts.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    </body>
 </html>
