--- a/portfolio.html
+++ b/portfolio.html
@@ -14,35 +14,48 @@
 
 <body>
 <a href="index.html">Home</a>
-<br>
+<br><br><br>
 
 <h2>Job 1 Done</h2>
+<br><br><br>
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="..." alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="..." alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+<!-- Bootstrap 4 carousel -->
+        <div class="container py-0 pb-3 px-0">
+            <div id="carouselExampleControls" class="mt-5 mt-md-3
+                    mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
+                    carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image1">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/bundylogo.jpg" class="d-block w-100" alt="job1 image2">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/lightbulb.jpg" class="d-block w-100" alt="job1 image3">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2>Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that</h2>
+                </div>
+            </div>
+        </div>
+
+<script src="scripts/scripts.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
