portfolio page carousels done

--- a/index.html
+++ b/index.html
@@ -4,70 +4,76 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta name="Description" content="Enter your description here"/>
+        <link rel="icon" href="favicon.ico">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="css/animate.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+        />
+        <link rel="stylesheet" href="css/animate.css">
         <title>Sutton Electrical Services</title>
     </head>
     <body>
 
-        <header class="header-area">
-            <nav class="navbar navbar-expand-md navbar-dark">
-                <div class="container">
-                    <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
-                        <span class="menu-icon-bar"></span>
-                        <span class="menu-icon-bar"></span>
-                        <span class="menu-icon-bar"></span>
-                    </button>
+<header class="header-area">
+    <nav class="navbar navbar-expand-md navbar-dark">
+        <div class="container">
+            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
+                <span class="menu-icon-bar"></span>
+                <span class="menu-icon-bar"></span>
+                <span class="menu-icon-bar"></span>
+            </button>
 
-                    <div id="main-nav" class="collapse navbar-collapse">
-                        <ul class="navbar-nav">
-                            <li>
-                                <a href="index.html" class="nav-item nav-link active">
-                                    <i class="fas fa-home"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#aboutus" class="nav-item nav-link">About Us</a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="services.html" class="nav-item nav-link" data-toggle="dropdown">Services</a>
-                                <div class="dropdown-menu">
-                                    <a href="services.html#domesticservices" class="dropdown-item">Domestic services</a>
-                                    <a href="services.html#corporateservices" class="dropdown-item">Corporate services</a>
-                                    <a href="services.html#generalservices" class="dropdown-item">General services</a>
-                                </div>
-                            </li>
-                            <li class="dropdown">
-                                <a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
-                                <div class="dropdown-menu">
-                                    <a href="portfolio.html" class="dropdown-item">Bundys job I did 1</a>
-                                    <a href="portfolio.html" class="dropdown-item">Bundys job I did 2</a>
-                                    <a href="portfolio.html" class="dropdown-item">Bundys job I did 3</a>
-                                </div>
-                            </li>
-                            <li>
-                                <a href="contact.html" class="nav-item nav-link">Contact</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-
-            <div class="logo">
-                <img class="rounded mx-auto d-block logo" src="assets/images/bundylogo.jpg" width="300">
+            <div id="main-nav" class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li>
+                        <a href="index.html" class="nav-item nav-link active">
+                            <i class="fas fa-home"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#aboutus" class="nav-item nav-link">About Us</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="services.html" class="nav-item nav-link" data-toggle="dropdown">Services</a>
+                        <div class="dropdown-menu">
+                            <a href="services.html#domesticservices" class="dropdown-item">Domestic services</a>
+                            <a href="services.html#corporateservices" class="dropdown-item">Corporate services</a>
+                            <a href="services.html#generalservices" class="dropdown-item">General services</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
+                        <div class="dropdown-menu">
+                            <a href="portfolio.html#job1" class="dropdown-item">Bundys job I did 1</a>
+                            <a href="portfolio.html#job2" class="dropdown-item">Bundys job I did 2</a>
+                            <a href="portfolio.html#job3" class="dropdown-item">Bundys job I did 3</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    </li>
+                </ul>
             </div>
+        </div>
+    </nav>
 
-            <div class="company-header">
-                <div class="container">
-                    <h1 id="company-name">Sutton Electrical Services</h1>
-                    <p>Serving you better, everyday</p>
-                    <a href="contact.html" class="button button-primary">Contact</a>
-                </div>
-            </div>
-        </header>
+    <div class="logo">
+        <img class="mx-auto d-block logo animate__animated animate__zoomInDown" src="assets/images/bundylogo.jpg" width="300">
+    </div>
+
+    <div class="company-header">
+        <div class="container">
+            <h1 id="company-name">Sutton Electrical Services</h1>
+            <p>Serving you better, everyday</p>
+            <a href="contact.html" class="button button-primary">Contact</a>
+        </div>
+    </div>
+</header>
 
         <img class="img-fluid" src="assets/images/lightbulb.jpg" alt="image of lightbulb">
 
@@ -107,7 +113,6 @@
                         </div>
                     </div>
                 </div>
-
 
                 <h1 id="testimonials">Testimonials</h1>
 
