--- a/portfolio.html
+++ b/portfolio.html
@@ -9,49 +9,207 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+<link rel="stylesheet" href="css/animate.css">
 <title>Sutton Electrical Services</title>
 </head>
 
 <body>
-<a href="index.html">Home</a>
-<br><br><br>
 
-<h2>Job 1 Done</h2>
-<br><br><br>
+<header class="header-area" id="job1">
+    <nav class="navbar navbar-expand-md navbar-dark">
+        <div class="container">
+            <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
+                <span class="menu-icon-bar"></span>
+                <span class="menu-icon-bar"></span>
+                <span class="menu-icon-bar"></span>
+            </button>
+
+            <div id="main-nav" class="collapse navbar-collapse">
+                <ul class="navbar-nav">
+                    <li>
+                        <a href="index.html" class="nav-item nav-link active">
+                            <i class="fas fa-home"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="index.html#aboutus" class="nav-item nav-link">About Us</a>
+                    </li>
+                    <li class="dropdown">
+                        <a href="services.html" class="nav-item nav-link" data-toggle="dropdown">Services</a>
+                        <div class="dropdown-menu">
+                            <a href="services.html#domesticservices" class="dropdown-item">Domestic services</a>
+                            <a href="services.html#corporateservices" class="dropdown-item">Corporate services</a>
+                            <a href="services.html#generalservices" class="dropdown-item">General services</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="portfolio.html" class="nav-item nav-link" data-toggle="dropdown">Portfolio</a>
+                        <div class="dropdown-menu">
+                            <a href="portfolio.html" class="dropdown-item">Bundys job I did 1</a>
+                            <a href="portfolio.html" class="dropdown-item">Bundys job I did 2</a>
+                            <a href="portfolio.html" class="dropdown-item">Bundys job I did 3</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+<div class="logo">
+    <img class="mx-auto d-block logo animate__animated animate__zoomInDown" src="assets/images/bundylogo.jpg" width="300">
+</div>
+
+<div class="company-header">
+    <div class="container">
+        <h1 id="company-name">Sutton Electrical Services</h1>
+        <p>Serving you better, everyday</p>
+        <a href="contact.html" class="button button-primary">Contact</a>
+    </div>
+</div>
+<div>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <a href="#job1" class="button button-primary">Portfolio 1</a>
+                <a href="#job2" class="button button-primary">Portfolio 2</a>
+                <a href="#job3" class="button button-primary">Portfolio3</a>
+            </div>
+        </div>
+    </div>
+</div>
+</header>
+
+<h2 class="text-center mt-5"><strong>This is a house I did</strong></h2>
 
 <!-- Bootstrap 4 carousel -->
-        <div class="container py-0 pb-3 px-0">
-            <div id="carouselExampleControls" class="mt-5 mt-md-3
-                    mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
-                    carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/bundylogo.jpg" class="d-block w-100" alt="job1 image2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="assets/images/lightbulb.jpg" class="d-block w-100" alt="job1 image3">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+<!-- Carousel 1 -->
+<div class="container py-0 pb-3 px-0">
+    <div id="carouselExampleIndicators" class="mt-5 mt-md-3
+            mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
+            carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image1">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image2">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job1 image3">
             </div>
         </div>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h2>Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that</h2>
-                </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h2 class="down20px">Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
+        </div>
+    </div>
+</div>
+<hr>
+<!-- Carousel 2 -->
+
+<h2 class="text-center mt-5" id="job2"><strong>This is a business job I did</strong></h2>
+
+<div class="container py-0 pb-3 px-0">
+    <div id="carouselExampleIndicators2" class="mt-5 mt-md-3
+            mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
+            carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators2" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators2" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators2" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job2 image1">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job2 image2">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job2 image3">
             </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators2" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h2 class="down20px">Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
+        </div>
+    </div>
+</div>
+<hr>
+<!-- Carousel 3 -->
+<h2 class="text-center" mt-5 id="job3"><strong>This is another job I did</strong></h2>
+
+<div class="container py-0 pb-3 px-0">
+    <div id="carouselExampleIndicators3" class="mt-5 mt-md-3
+            mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
+            carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators3" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators3" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators3" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job3 image1">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job3 image2">
+            </div>
+            <div class="carousel-item">
+                <img src="assets/images/electricianimage.jpg" class="d-block w-100" alt="job3 image3">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators3" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators3" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h2 class="down20px">Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
+        </div>
+    </div>
+</div>
 
 <script src="scripts/scripts.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
