updated animate.css links

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,11 @@ rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 />
 <link rel="stylesheet" href="css/animate.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="scripts/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
 <title>Sutton Electrical Services</title>
 </head>
 
@@ -74,7 +79,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     </div>
 </div>
 <div>
-    <div class="container">
+    <div class="container centreportfolio">
         <div class="row">
             <div class="col">
                 <a href="#job1" class="button button-primary">Portfolio 1</a>
@@ -86,11 +91,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 </div>
 </header>
 
-<h2 class="text-center mt-5"><strong>This is a house I did</strong></h2>
+<h2 class="text-center mt-5 wow animate__animated animate__zoomInUp"><strong>This is a house I did</strong></h2>
 
 <!-- Bootstrap 4 carousel -->
 <!-- Carousel 1 -->
-<div class="container py-0 pb-3 px-0">
+<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp">
     <div id="carouselExampleIndicators" class="mt-5 mt-md-3
             mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
             carousel slide" data-ride="carousel">
@@ -120,7 +125,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </a>
     </div>
 </div>
-<div class="container">
+<div class="container wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
             <h2 class="down20px">Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
@@ -130,9 +135,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <hr>
 <!-- Carousel 2 -->
 
-<h2 class="text-center mt-5" id="job2"><strong>This is a business job I did</strong></h2>
+<h2 class="text-center mt-5 wow animate__animated animate__zoomInUp" id="job2"><strong>This is a business job I did</strong></h2>
 
-<div class="container py-0 pb-3 px-0">
+<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp">
     <div id="carouselExampleIndicators2" class="mt-5 mt-md-3
             mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
             carousel slide" data-ride="carousel">
@@ -162,7 +167,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </a>
     </div>
 </div>
-<div class="container">
+<div class="container wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
             <h2 class="down20px">Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
@@ -171,9 +176,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 </div>
 <hr>
 <!-- Carousel 3 -->
-<h2 class="text-center" mt-5 id="job3"><strong>This is another job I did</strong></h2>
+<h2 class="text-cente wow animate__animated animate__zoomInUp" mt-5 id="job3"><strong>This is another job I did</strong></h2>
 
-<div class="container py-0 pb-3 px-0">
+<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp">
     <div id="carouselExampleIndicators3" class="mt-5 mt-md-3
             mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
             carousel slide" data-ride="carousel">
@@ -203,7 +208,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </a>
     </div>
 </div>
-<div class="container">
+<div class="container wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
             <h2 class="down20px">Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
