--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         />
-        <link rel="stylesheet" href="css/animate.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="scripts/wow.min.js"></script>
+        <script>
+            new WOW().init();
+        </script>
         <title>Sutton Electrical Services</title>
     </head>
     <body>
@@ -63,14 +67,14 @@
     </nav>
 
     <div class="logo">
-        <img class="mx-auto d-block logo animate__animated animate__zoomInDown" src="assets/images/bundylogo.jpg" width="300">
+        <img class="mx-auto d-block logo animate__animated animate__zoomIn" src="assets/images/bundylogo.jpg" width="300">
     </div>
 
-    <div class="company-header">
+    <div class="company-header hidemobile">
         <div class="container">
             <h1 id="company-name">Sutton Electrical Services</h1>
-            <p>Serving you better, everyday</p>
-            <a href="contact.html" class="button button-primary">Contact</a>
+            <p class="hidemobile">Serving you better, everyday</p>
+            <a href="contact.html" class="button button-primary hidemobile">Contact</a>
         </div>
     </div>
 </header>
@@ -117,9 +121,9 @@
                 <h1 id="testimonials">Testimonials</h1>
 
                 <section id="content" class="content">
-                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="row row-cols-1 row-cols-md-3 g-4 wow animate__animated animate__zoomIn">
                         <div class="col">
-                            <div class="card">
+                            <div class="card ">
                                 <img src="assets/images/electricianimage.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">
@@ -164,40 +168,54 @@
 
                 </section>
 
-                <footer class="footer-area overlay" id="footer">
-                    <nav class="navbar navbar-expand-md navbar-dark">
-                        <div class="container">
+  <!-- Site footer -->
+    <footer class="site-footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-6">
+            <h6>About Us</h6>
+            <p class="text-justify">Stuff here</p>
+          </div>
 
-                            <div class="collapse navbar-collapse">
-                                <ul class="navbar-nav">
-                                    <li>
-                                        <a href="index.html" class="nav-item nav-link active">
-                                            <i class="fas fa-home"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="index.html#aboutus" class="nav-item nav-link">About Us</a>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="services.html" class="nav-item nav-link">Services</a>
-                                    </li>
-                                    <li>
-                                        <a href="portfolio.html" class="nav-item nav-link">Portfolio</a>
-                                    </li>
-                                    <li>
-                                        <a href="contact.html" class="nav-item nav-link">Contact</a>
-                                    </li>
-                                </ul>
-                                <div class="facebook-div">
-                                    <a id="facebook-icon" href="https://www.facebook.com/SuttonElectricalServices/" class="nav-item nav-link" target="_blank">
-                                        <i class="fab fa-facebook-square"></i>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </nav>
-                    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-                </footer>
+          <div class="col-xs-6 col-md-3">
+            <h6>Categories</h6>
+            <ul class="footer-links">
+              <li><a href="http://scanfcode.com/category/c-language/">C</a></li>
+              <li><a href="http://scanfcode.com/category/front-end-development/">UI Design</a></li>
+              <li><a href="http://scanfcode.com/category/back-end-development/">PHP</a></li>
+              <li><a href="http://scanfcode.com/category/java-programming-language/">Java</a></li>
+              <li><a href="http://scanfcode.com/category/android/">Android</a></li>
+              <li><a href="http://scanfcode.com/category/templates/">Templates</a></li>
+            </ul>
+          </div>
+
+          <div class="col-xs-6 col-md-3">
+            <h6>Quick Links</h6>
+            <ul class="footer-links">
+              <li><a href="http://scanfcode.com/about/">About Us</a></li>
+              <li><a href="http://scanfcode.com/contact/">Contact Us</a></li>
+              <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Contribute</a></li>
+              <li><a href="http://scanfcode.com/privacy-policy/">Privacy Policy</a></li>
+              <li><a href="http://scanfcode.com/sitemap/">Sitemap</a></li>
+            </ul>
+          </div>
+        </div>
+        <hr>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-6 col-xs-12">
+            <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by Stuart Cox</p>
+          </div>
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <ul class="social-icons">
+              <li><a class="facebook" href="#"><i class="fab fa-facebook-square"></i></a></li>   
+            </ul>
+          </div>
+        </div>
+      </div>
+</footer>
 
                 <script src="scripts/scripts.js"></script>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
