updated home page & contact to bring down line

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                 <a href="contact.html" class="btn button-primary">Contact</a>
             </div>
         </div>
+        </div>
+        </div>
 
         <!-- Coronavirus notice -->
         <div class="container cvnotice d-flex justify-content-center">
@@ -104,12 +106,12 @@
                 <div class="col">
                     <p>
                         <button class="btn button-primary shadow-none" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                            Coronavirus notice
+                            <i class="fas fa-shield-virus"></i> Coronavirus notice
                         </button>
                     </p>
                     <div class="collapse" id="collapseExample">
-                        <div class="card card-body">
-                            <strong>We do everything we can to work and operate in a safe environment, this includes;</strong>
+                        <div class="card card-body text-center">
+                            <strong>We do everything we can to work and operate in a safe environment, this includes</strong>
                             <ul class="list-group">
                                 <li class="list-group-item">Doing this</li>
                                 <li class="list-group-item">Doing that</li>
@@ -172,8 +174,8 @@
         </section>
 
 <!-- Site footer -->
-<footer class="site-footer">
-    <div class="container">
+<footer class="site-footer mt-3">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-6">
             <h6><strong>About Us</strong></h6>
@@ -206,7 +208,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-sm-6 col-xs-12">
-                <p class="copyright-text">Copyright &copy; 2021 All Rights Reserved by Stuart Cox</p>
+                <p class="copyright-text"><small>Copyright &copy; 2021 All Rights Reserved by Stuart Cox</small></p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <ul class="social-icons">
