--- a/portfolio.html
+++ b/portfolio.html
@@ -78,10 +78,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         <a href="contact.html" class="button button-primary">Contact</a>
     </div>
 </div>
+</header>
 <div>
-    <div class="container centreportfolio">
+    <div class="container wow animate__animated animate__zoomInUp">
         <div class="row">
-            <div class="col">
+            <div class="col text-center">
                 <a href="#job1" class="button button-primary">Portfolio 1</a>
                 <a href="#job2" class="button button-primary">Portfolio 2</a>
                 <a href="#job3" class="button button-primary">Portfolio3</a>
@@ -89,13 +90,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </div>
     </div>
 </div>
-</header>
-
 <h2 class="text-center mt-5 wow animate__animated animate__zoomInUp"><strong>This is a house I did</strong></h2>
 
 <!-- Bootstrap 4 carousel -->
 <!-- Carousel 1 -->
-<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp">
+<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp mt-5">
     <div id="carouselExampleIndicators" class="mt-5 mt-md-3
             mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
             carousel slide" data-ride="carousel">
@@ -128,16 +127,16 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 <div class="container wow animate__animated animate__zoomInUp">
     <div class="row">
         <div class="col">
-            <h2 class="down20px">Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
+            <h2 class="down20px">This carousel has 3 images but you can have as many as you want. Some stuff here about this job, what it involved and why you were so great. Just generally a load of stuff about how you did a great job and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. <br><br>Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that. Must take up a few lines lines lines and even more lines to tell them what you did and all that.</h2>
         </div>
     </div>
 </div>
 <hr>
 <!-- Carousel 2 -->
 
-<h2 class="text-center mt-5 wow animate__animated animate__zoomInUp" id="job2"><strong>This is a business job I did</strong></h2>
+<h2 class="text-center mt-5 wow animate__animated animate__zoomInUp mt-5" id="job2"><strong>This is a business job I did</strong></h2>
 
-<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp">
+<div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp mt-5">
     <div id="carouselExampleIndicators2" class="mt-5 mt-md-3
             mt-lg-2 col-12 col-md-10 col-lg-8 mx-auto px-0
             carousel slide" data-ride="carousel">
@@ -176,7 +175,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
 </div>
 <hr>
 <!-- Carousel 3 -->
-<h2 class="text-cente wow animate__animated animate__zoomInUp" mt-5 id="job3"><strong>This is another job I did</strong></h2>
+<h2 class="text-center wow animate__animated animate__zoomInUp mt-5" id="job3"><strong>This is another job I did</strong></h2>
 
 <div class="container py-0 pb-3 px-0 wow animate__animated animate__zoomInUp">
     <div id="carouselExampleIndicators3" class="mt-5 mt-md-3
@@ -215,6 +214,53 @@ href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
         </div>
     </div>
 </div>
+
+<!-- Site footer -->
+<footer class="site-footer mt-3">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+            <h6><strong>About Us</strong></h6>
+            <p class="text-justify">Stuff here about how great Bundy is and how he can do amazing stuff with wires and all that.
+                <br><br>
+            It can't be said how amazing Bundy is at all this stuff, just brilliant.<p>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+            <h6><strong>Services</strong></h6>
+            <ul class="footer-links">
+                <li><a href="services.html#domesticservices">Domestic Services</a></li>
+                <li><a href="services.html#corporateservices">Corporate Services</a></li>
+                <li><a href="services.html#generalservices">General Services</a></li>
+            </ul>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+            <h6><strong>Quick Links</strong></h6>
+            <ul class="footer-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html##aboutus">About Us</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text"><small>Copyright &copy; 2021 All Rights Reserved by Stuart Cox</small></p>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <ul class="social-icons">
+                    <li><a class="facebook" href="#"><i class="fab fa-facebook-square"></i></a></li>   
+                </ul>
+            </div>
+        </div>
+    </div>
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+</footer>
 
 <script src="scripts/scripts.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
